# DocTranslator

./: .gitignore  README.md  README_en.md  compose.yaml  deploy.sh  docker-compose.yml  mcp_local_server.py  nginx.conf  update.sh
admin/: .env.community  .env.demo  .env.development  .env.production  .env.staging  Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
admin/src/router/: index.js  index.ts
admin/src/utils/: service.ts
backend/: .env  .env.example  Dockerfile  app.py  mcp_local_server.py  mcp_server.py  migrate_startup.py  requirements.txt
backend/app/: __init__.py  config.py  extensions.py  init.sql  prompt  routes.py
backend/app/mcp/: auth.py  remote.py  tools.py
backend/app/models/: __init__.py  announcement.py  cache.py  comparison.py  customer.py  job.py  mcp_api_key.py  message.py  migration.py  prompt.py  pwdResetToken.py  send_code.py  session.py  setting.py  translate.py  translateLog.py  translateTask.py  user.py  users.py
backend/app/resources/: hello.py
backend/app/schemas/: account.py  auth.py  validators.py
backend/app/script/: init_db.py  insert_init_db.py  migrate.py
backend/app/translate/: __init__.py  check_openai.py  check_threading.py  common.py  csv_handle.py  db.py  (+14 more)
backend/db/: dev.db
frontend/: .env.community  .env.development  .env.production  Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/public/: webConfig.js
frontend/src/: main.js  style.css
mcp_client/: README.md  pyproject.toml
mcp_client/doctranslator_mcp/: __init__.py  server.py
nginx/: nginx.conf
(+111 files in other folders)
