[project]
name = "doctranslator-local-mcp"
version = "0.1.0"
description = "DocTranslator 本地MCP 服务器，支持通过MCP客户端（如 Claude Desktop） 翻译本地文档文件"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "DocTranslator" },
]
keywords = ["mcp", "doctranslator", "translation", "llm", "document"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.28.0",
]

[project.scripts]
doctranslator-local-mcp = "doctranslator_mcp.server:main"

[project.urls]
Homepage = "https://github.com/mingchen666/DocTranslator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["doctranslator_mcp"]
